<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Given strings -->
    <string name="sharemessage">This marvelous colorized image was generated by a project from CPSC 475, Android mobile programming.  Please contact Prof. Keith Perkins at keith.perkins@cnu.edu if you have any questions about our department or the classes we offer or technology in general.</string>
    <string name="shareTitle">Welcome to CNU from the PCSE department!</string>

    <!-- Menu Strings -->
    <string name="menu_revert_title">Revert</string>
    <string name="menu_edit_title">Sketch</string>
    <string name="menu_view_title">Colorize</string>
    <string name="menu_share_title">Share</string>
    <string name="menu_settings_title">Settings</string>

    <!-- Preference Strings -->
    <string name="share_options_title">Share Options</string>
    <string name="share_subject_title">Share Subject</string>
    <string name="share_subject_summary">This is the subject of the message you would like to share</string>
    <string name="share_subject_dialog_title">Title Dialog</string>
    <string name="share_text_title">Share Text</string>
    <string name="share_text_summary">This is the text you would like to share</string>
    <string name="share_text_dialog_title">Message Dialog</string>
    <string name="rendering_options_title">Rendering Options</string>
    <string name="rendering_options_summary">Level of sketchiness and color saturation</string>
    <string name="sketchiness_title">Sketchiness</string>
    <string name="sketchiness_summary">Set BW threshold, higher numbers correspond too less detail and a whiter image</string>
    <string name="saturation_title">Saturation</string>
    <string name="saturation_summary">Set color saturation, higher numbers correspond to more colorful images</string>
    <string name="from_email_address">caleb.thompson.17@cnu.edu</string>

    <!-- Preference Settings Keys -->
    <string name="preference_subject_key" translatable="false">preference_subject</string>
    <string name="preference_text_key">preference_body_text</string>
    <string name="preference_sketchiness_key">preference_sketchiness</string>
    <string name="preference_saturation_key">preference_saturation</string>

</resources>