<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/share_options_title">

        <EditTextPreference
            app:key="@string/preference_subject_key"
            app:title="@string/share_subject_title"
            app:summary="@string/share_subject_summary"
            app:dialogTitle="@string/share_subject_dialog_title"
            app:defaultValue="@string/shareTitle"/>

        <EditTextPreference
            app:key="@string/preference_text_key"
            app:title="@string/share_text_title"
            app:summary="@string/share_text_summary"
            app:dialogTitle="Message Dialog"
            app:defaultValue="@string/sharemessage"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/rendering_options_title"
        app:summary="@string/rendering_options_summary">

        <SeekBarPreference
            app:key="@string/preference_sketchiness_key"
            app:title="@string/sketchiness_title"
            app:summary="@string/sketchiness_summary"
            app:showSeekBarValue="true"
            app:defaultValue="3"/>

        <SeekBarPreference
            app:key="@string/preference_saturation_key"
            app:title="@string/saturation_title"
            app:summary="@string/saturation_summary"
            app:showSeekBarValue="true"
            app:defaultValue="15"/>

    </PreferenceCategory>

</PreferenceScreen>
